# eve-arbitrage-finder

./: .gitignore  Cargo.toml  PROFILE_NOTES.md  README.md  arbitrage_time_analysis.ipynb  arbitrage_time_analysis.py  convert_file.py  convert_file_to_avro.py  download.sh  export_all_arbitrages.py  fetch_day_data.sh  fetch_sample_data.py  fetch_sample_data.sh  find_arbitrages.ipynb  find_best_arb.py  pyproject.toml  requirements.txt  simulate_day.py  spark-arb.ipynb  web_api.py
src/: main.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: main.jsx  styles.css
