[package]
name = "eve-arb-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bzip2 = "0.6"
bytemuck = { version = "1.24", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
glob = "0.3"
memmap2 = "0.9"
rustc-hash = "2.1"
